tests/ui/generic-associated-types/extended/lending_iterator_2.stderr
error[E0276]: impl has stricter requirements than trait
  --> $DIR/lending_iterator_2.rs:8:45
   |
LL |     fn from_iter<T: for<'x> LendingIterator<Item<'x> = A>>(iter: T) -> Self;
   |     ------------------------------------------------------------------------ definition of `from_iter` from trait
...
LL |     fn from_iter<I: for<'x> LendingIterator<Item<'x> = A>>(mut iter: I) -> Self {
   |                                             ^^^^^^^^^^^^ impl has extra requirement `I: 'x`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0276`.
